--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -41,7 +42,6 @@ body {
   text-decoration: none;
   font-weight: 700;
   font-size: 18px;
-  font-family: "DM Sans", sans-serif;
   display: flex;
   gap: 1rem;
 }
@@ -67,7 +67,6 @@ body {
   border: 0px;
   font-size: 1rem;
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -112,8 +111,8 @@ body {
 }
 
 .section-playlist__content .text {
- padding-bottom: 14px;
- color: #fff;
+  padding-bottom: 14px;
+  color: #fff;
 }
 
 .section-playlist__content .title {
@@ -129,11 +128,10 @@ body {
 .section-playlist__content .section-playlist__button {
   background-color: #ffffff;
   color: #000;
-  border-radius: 9999px;
+  border-radius: 20px;
   display: flex;
   font-size: 0.8rem;
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   text-transform: none;
   padding: 10px;
@@ -169,4 +167,44 @@ body {
   width: 170px;
   margin: 8px;
   font-weight: bold;
+}
+
+.disclaimer-premium {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to left, #1FDF64, #000);
+  padding: 15px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.disclaimer-premium .text {
+ flex-shrink: 0;
+}
+.disclaimer-premium .disclaimer-premium__title {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.disclaimer-premium button {
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 14px 30px;
+  border: 0px;
+  border-radius: 40px;
+  cursor: pointer;
+  flex-shrink: 0;
 }
